--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -545,7 +545,7 @@
 
         <div class="section-title" data-aos="zoom-out">
           <h2>Team </h2>
-          <p>Meet Our Centum Learning Leadership</p>
+          <p>Meet Our Centum Foundation Tech Team </p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -971,8 +971,10 @@ CIN: U74120MH2007PLC402278</p>
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
+    <img alt="" src="assets/img/UC.png">
       <h3>Centum learning</h3>
-      <p>desinged and developed by She Arise Trainees</p>
+      <p>desinged and developed by <h1>Shobha Ghante </h1>
+      She Arise 2.O Aspirant</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
