--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -973,7 +973,8 @@ CIN: U74120MH2007PLC402278</p>
     <div class="container">
     <img alt="" src="assets/img/UC.png">
       <h3>Centum learning</h3>
-      <p>desinged and developed by <h1>Shobha Ghante </h1>
+      <p>desinged and developed by 
+      <h1>Shobha Ghante </h1>
       She Arise 2.O Aspirant</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
