--- a/Centum_Learning/inner-page.html
+++ b/Centum_Learning/inner-page.html
@@ -114,11 +114,13 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
+    <img alt="" src="assets/img/UC.png">
       <h3>Centum learning</h3>
-      <p>desinged and developed by She Arise Trainees</p>
+      <p>desinged and developed by 
+      <h1>Shobha Ghante </h1>
+      She Arise 2.O Aspirant</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -138,7 +140,6 @@
       </div> -->
     </div>
   </footer><!-- End Footer -->
-
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
