--- a/Centum_Learning/portfolio-details.html
+++ b/Centum_Learning/portfolio-details.html
@@ -171,11 +171,13 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
+    <img alt="" src="assets/img/UC.png">
       <h3>Centum learning</h3>
-      <p>desinged and developed by She Arise Trainees</p>
+      <p>desinged and developed by 
+      <h1>Shobha Ghante </h1>
+      She Arise 2.O Aspirant</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
