--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link rel="icon" href="assets/img/UC.png" sizes="32x32" type="image/png">
-  <link href="assets/img/UC.png" rel="apple-touch-icon">
+  <link rel="icon" href="assets/img/Centum.jpg" sizes="32x32" type="image/png">
+  <link href="assets/img/Centum.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
