--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -971,7 +971,7 @@ CIN: U74120MH2007PLC402278</p>
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-    <img alt="" src="assets/img/UC.png">
+    <img alt="" src="assets/img/footer-logo.png">
       <h3>Centum learning</h3>
       <p>desinged and developed by 
       <h1>Shobha Ghante </h1>
