--- a/Centum_Learning/inner-page.html
+++ b/Centum_Learning/inner-page.html
@@ -116,7 +116,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-    <img alt="" src="assets/img/UC.png">
+    <img alt="" src="assets/img/footer-logo.png">
       <h3>Centum learning</h3>
       <p>desinged and developed by 
       <h1>Shobha Ghante </h1>
