--- a/Centum_Learning/portfolio-details.html
+++ b/Centum_Learning/portfolio-details.html
@@ -173,7 +173,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-    <img alt="" src="assets/img/UC.png">
+    <img alt="" src="assets/img/footer-logo.png">
       <h3>Centum learning</h3>
       <p>desinged and developed by 
       <h1>Shobha Ghante </h1>
