--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -45,7 +45,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html"><img src="assets/img/UC.png" alt="" class="img-fluid">Centum Learning</a></h1>
+        <h1><a href="index.html"><img src="assets/img/UC.png" alt="" class="img-fluid"></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -113,7 +113,24 @@
       </div>
 
       <!-- Slide 3 -->
+      <div class="carousel-item">
+        <div class="carousel-container">
+          <h2 class="animate__animated animate__fadeInDown">Creating sustainable social impact</h2>
+          <p class="animate__animated animate__fadeInUp">We work in close partnership with governments and multilateral organizations to operationalize skill-development and capability-building efforts as well as with companies in achieving sustainable impact through their CSR efforts.
+
+				We are committed towards building a better tomorrow by enabling individuals, teams and organizations to fulfil their potential. Thus, building a better society and a better country.</p>
+          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+        </div>
+      </div>
       
+      <!-- Slide 4 -->
+      <div class="carousel-item">
+        <div class="carousel-container">
+          <h2 class="animate__animated animate__fadeInDown">Across industries. Across continents</h2>
+          <p class="animate__animated animate__fadeInUp">Centum's expertise has grown organically over the past 15 years as the scope and scale of our work increased exponentially. We serve leading brands and companies in 15+ countries (India and Africa) across diverse industries like Consumer Internet, Auto, BFSI, Retail, Consumer Durable, FMCG and Telecom to name a few. Over 5 million learners impacted so far!</p>
+          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+        </div>
+      </div>
 
       <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
