--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -54,10 +54,10 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li class="dropdown"><a href="#"><span>What we Do </span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>CSR Project </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Sales & Service Excellence Solution</a></li>
-              <li class="dropdown"><a href="#"><span>Leadership Development</span> <i class="bi bi-chevron-right"></i></a>
+              <li><a href="#">She Arise </a></li>
+             <!-- <li class="dropdown"><a href="#"><span>Leadership Development</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Grow Leaders From within </a></li>
                   <li><a href="#">Leadership consulting </a></li>
@@ -65,10 +65,13 @@
                   <li><a href="#">Soft Skill Training Solution</a></li>
                   <li><a href="#">Content program </a></li>
                 </ul>
-              </li>
-              <li><a href="#">Digital Learning </a></li>
-              <li><a href="#">Employeability</a></li>
-              <li><a href="#">Impacting Africa</a></li>
+              </li>-->
+              <li><a href="#">She Arise 2.O </a></li>
+              <li><a href="#">Accenture</a></li>
+              <li><a href="#">Advance IT Skills</a></li>
+              <li><a href="#">Cognizant Tech For All</a></li>
+              <li><a href="#"> Sonata </a></li>
+              <li><a href="#"> Sonata1 </a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#services">How We Work </a></li>
@@ -562,13 +565,13 @@
 
         <div class="section-title" data-aos="zoom-out">
           <h2>Team </h2>
-          <p>Meet Our Centum Foundation Tech Team </p>
+          <p> Centum Foundation Tech Team </p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
-            <div class="swiper-slide">
+          <!--  <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -579,7 +582,7 @@
                 <h3>Sanjay Bahl</h3>
                 <h4><a href="https://www.linkedin.com/in/sanjay-bahl-101933133/">View Profile</a></h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div> End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -594,7 +597,7 @@
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+           <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -605,7 +608,7 @@
                 <h3>Suvendu Dhar</h3>
                 <h4><a href="https://www.linkedin.com/in/suvendu-dhar-31024417/">View Profile</a></h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div> End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -649,8 +652,8 @@
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
-          <h2>Webinar</h2>
-          <p>Live Webinar</p>
+          <h2>testimonial</h2>
+          <p></p>
         </div>
 
         <ul class="faq-list">
