new second commit

--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -273,12 +273,16 @@
              <div>
               <h1 style="color: navy;font-style: italic;" align="center">Awards and Recognition</h1>
               <marquee  behavior="scroll" direction="left">  
-              <img src= "assets/img/award.jpg" alt="" class="img-fluid">    
-              <img src= "assets/img/award.jpg" alt="" class="img-fluid"> 
-              <img src= "assets/img/award.jpg" alt="" class="img-fluid"> 
-              <img src= "assets/img/award.jpg" alt="" class="img-fluid"> 
-              <img src= "assets/img/award.jpg" alt="" class="img-fluid"> 
-              <img src= "assets/img/award.jpg" alt="" class="img-fluid"> 
+              <img src= "assets/img/a1.jpeg" alt="" class="img-fluid">    
+              <img src= "assets/img/a2.jpeg" alt="" class="img-fluid"> 
+              <img src= "assets/img/a3.jpg" alt="" class="img-fluid"> 
+              <img src= "assets/img/a4.jpg" alt="" class="img-fluid"> 
+              <img src= "assets/img/a5.jpg" alt="" class="img-fluid"> 
+              <img src= "assets/img/a6.jpg" alt="" class="img-fluid"> 
+              <img src= "assets/img/a7.jpg" alt="" class="img-fluid"> 
+              <img src= "assets/img/a8.jpg" alt="" class="img-fluid"> 
+              <img src= "assets/img/a9.jpg" alt="" class="img-fluid"> 
+              <img src= "assets/img/a10.jpg" alt="" class="img-fluid"> 
               
               
           </marquee></div>
@@ -927,15 +931,15 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h3 class="section-heading">India</h3>
-      <h5>Corporate Office</h5>
-<p>Centum Learning Limited<br>
-127, Neelagagan, Mandi Road, Sultanpur, Mehrauli, <br>New Delhi - 110030, India.<br>
-CIN: U74120MH2007PLC402278<br>
-Email: <a href="mailto:contactus@centumlearning.com">contactus@centumlearning.com</a><br>
-Tel: +91-11-4588 1000/ 1001</p>
-<h4>Registered Office Address</h4>
-<p>Nishuvi, Ground Floor, 75, Dr. Annie Besant Road, <br>Worli, Mumbai - 400018<br>
-CIN: U74120MH2007PLC402278</p>
+      				<h5>Corporate Office</h5>
+						<p>Centum Learning Limited<br>
+						127, Neelagagan, Mandi Road, Sultanpur, Mehrauli, <br>New Delhi - 110030, India.<br>
+						CIN: U74120MH2007PLC402278<br>
+						Email: <a href="mailto:contactus@centumlearning.com">contactus@centumlearning.com</a><br>
+						Tel: +91-11-4588 1000/ 1001</p>
+						<h4>Registered Office Address</h4>
+						<p>Nishuvi, Ground Floor, 75, Dr. Annie Besant Road, <br>Worli, Mumbai - 400018<br>
+						CIN: U74120MH2007PLC402278</p>
               </div>
 
               <div class="email">
