--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -56,7 +56,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li class="dropdown"><a href="#"><span>CSR Project </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">She Arise </a></li>
+              <li><a href="#She_Arise1">She Arise </a></li>
              <!-- <li class="dropdown"><a href="#"><span>Leadership Development</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Grow Leaders From within </a></li>
@@ -66,11 +66,11 @@
                   <li><a href="#">Content program </a></li>
                 </ul>
               </li>-->
-              <li><a href="#">She Arise 2.O </a></li>
-              <li><a href="#">Accenture Advance IT / Digital Skills</a></li>
+              <li><a href="#She_Arise1">She Arise 2.O </a></li>
+              <li><a href="#Accenture">Accenture Advance IT / Digital Skills</a></li>
              
-              <li><a href="#">Cognizant Tech For All</a></li>
-              <li><a href="#"> Sonata </a></li>
+              <li><a href="#Cognizant">Cognizant Tech For All</a></li>
+              <li><a href="#Sonata"> Sonata </a></li>
               <li><a href="#"> Sonata1 </a></li>
             </ul>
           </li>
@@ -273,7 +273,7 @@
              <div>
               <h1 style="color: navy;font-style: italic;" align="center">Awards and Recognition</h1>
               <marquee  behavior="scroll" direction="left">  
-              <img src= "assets/img/1692863049586.gif" alt="" class="img-fluid">
+              <img src= "assets/img/1692863049586.gif" alt="" class="img-fluid" height="50%">
               <img src= "assets/img/a1.jpeg" alt="" class="img-fluid">    
               <img src= "assets/img/a2.jpeg" alt="" class="img-fluid"> 
               <img src= "assets/img/a3.jpeg" alt="" class="img-fluid">  
