--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -213,8 +213,8 @@
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
-          <h2>She Arise 2.O</h2>
-          <p>Who we are</p>
+          <p>She Arise 2.O</p>
+          
         </div>
 
         <div class="row content" data-aos="fade-up">
@@ -245,7 +245,7 @@
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
-          <h2>Accenture Advance IT / Digital Skills</h2>
+          <p>Accenture Advance IT / Digital Skills</p>
           
         </div>
 
