--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -267,6 +267,10 @@
               <li><i class="ri-check-double-line"></i> Contribute towards developing an industry driven learning eco-system ofrelevant skills on existing and emerging technologies.</li>
             </ul>
           </div>
+          <div class="col-lg-6 order-1 order-lg-2 text-center">
+                <img src="assets/img/Accenture-Logo.png" alt="" class="img-fluid">
+                
+              </div>
           
         </div>
 
@@ -718,7 +722,7 @@
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
-          <h2>testimonial</h2>
+          <h2>testimonies</h2>
           <p></p>
         </div>
 
@@ -824,7 +828,7 @@
 
         <div class="section-title" data-aos="zoom-out">
           <h2>Team</h2>
-          <p>Our Hardworking Team</p>
+          <p>CSR project All Pictures </p>
         </div>
 
         <div class="row">
@@ -834,9 +838,9 @@
               <div class="member-img">
                 <img src="assets/img/1.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                <!--  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>-->
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -852,9 +856,9 @@
               <div class="member-img">
                 <img src="assets/img/2.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                <!--  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>-->
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -870,9 +874,9 @@
               <div class="member-img">
                 <img src="assets/img/3.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                 <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>-->
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -888,9 +892,9 @@
               <div class="member-img">
                 <img src="assets/img/4.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                <!--  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>-->
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -906,9 +910,9 @@
               <div class="member-img">
                 <img src="assets/img/5.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+              <!--    <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>-->
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -924,9 +928,9 @@
               <div class="member-img">
                 <img src="assets/img/6.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                 <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>-->
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -941,9 +945,9 @@
               <div class="member-img">
                 <img src="assets/img/7.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+               <!--   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>-->
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -959,9 +963,9 @@
               <div class="member-img">
                 <img src="assets/img/8.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                <!--  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>-->
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
