--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -207,6 +207,22 @@
 
       </div>
     </section><!-- End About Section -->
+    <!-- ======= Cta Section ======= -->
+    <section id="cta" class="cta">
+      <div class="container">
+
+        <div class="row" data-aos="zoom-out">
+          <div class="col-lg-15 text-center text-lg-start">
+            
+            <p>CSR Projects</p>
+          </div>
+          <!-- <div class="col-lg-3 cta-btn-container text-center">
+            <a class="cta-btn align-middle" href="#">Call To Action</a>
+          </div> -->
+        </div>
+
+      </div>
+    </section><!-- End Cta Section -->
 
  <!-- ======= CSR Section ======= -->
     <section id="She_Arise1" class="She_Arise1">
@@ -629,7 +645,7 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= Tech Team Section ======= -->
     <section id="testimonials" class="testimonials">
       <div class="container">
 
@@ -693,7 +709,7 @@
                 <h3>Rajesh Kashyap</h3>
                 <h4><a href="https://www.linkedin.com/in/rajesh-kashyap-17684420/">View Profile</a></h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- Tech Team item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -713,7 +729,7 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section><!-- Tech Teams Section -->
 
     
 
