--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -54,7 +54,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li class="dropdown"><a href="#"><span>CSR Project </span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#dropdown"><span>CSR Project </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#She_Arise">She Arise </a></li>
              <!-- <li class="dropdown"><a href="#"><span>Leadership Development</span> <i class="bi bi-chevron-right"></i></a>
@@ -208,13 +208,13 @@
       </div>
     </section><!-- End About Section -->
     <!-- ======= Cta Section ======= -->
-    <section id="cta" class="cta">
+    <section id="dropdown" class="dropdown">
       <div class="container">
 
         <div class="row" data-aos="zoom-out">
           <div class="col-lg-15 text-center text-lg-start">
             
-            <h1>CSR Projects</h1>
+            <h1 style="color: white ; align-content: center;">CSR Projects</h1>
           </div>
           <!-- <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
