--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -214,7 +214,7 @@
         <div class="row" data-aos="zoom-out">
           <div class="col-lg-15 text-center text-lg-start">
             
-            <h1 style="color: white ; align-content: center;">CSR Projects</h1>
+            <h1 >CSR Projects</h1>
           </div>
           <!-- <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
