--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -208,7 +208,7 @@
       </div>
     </section><!-- End About Section -->
     <!-- ======= Cta Section ======= -->
-    <section id="dropdown" class="dropdown">
+    <section id="cta" class="cta">
       <div class="container">
 
         <div class="row" data-aos="zoom-out">
