--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -214,7 +214,7 @@
         <div class="row" data-aos="zoom-out">
           <div class="col-lg-15 text-center text-lg-start">
             
-            <p>CSR Project</p>
+            <h1>CSR Project</h1>
           </div>
           <!-- <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
