--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -207,23 +207,23 @@
 
       </div>
     </section><!-- End About Section -->
-    <!-- ======= Cta Section ======= -->
-    <section id="cta" class="cta">
+    <!-- ======= dropdown Section ======= -->
+    <section id="dropdown" class="dropdown">
       <div class="container">
 
         <div class="row" data-aos="zoom-out">
           <div class="col-lg-15 text-center text-lg-start">
             
-            <h1>CSR Project</h1>
+            <h3>CSR Project</h3>
           </div>
           
-          <!-- <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+          <!-- <div class="col-lg-3 dropdown-btn-container text-center">
+            <a class="dropdown-btn align-middle" href="#">Call To Action</a>
           </div> -->
         </div>
 
       </div>
-    </section><!-- End Cta Section -->
+    </section><!-- End dropdown Section -->
 
  <!-- ======= CSR Section ======= -->
     <section id="She_Arise1" class="She_Arise1">
