--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -214,7 +214,7 @@
         <div class="row" data-aos="zoom-out">
           <div class="col-lg-15 text-center text-lg-start">
             
-            <h3>CSR Project</h3>
+            <h3>CSR Projects</h3>
           </div>
           
           <!-- <div class="col-lg-3 dropdown-btn-container text-center">
