--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -208,7 +208,7 @@
       </div>
     </section><!-- End About Section -->
     <!-- ======= dropdown Section ======= -->
-    <section id="dropdown" class="dropdown">
+    <section id="ctn" class="ctn">
       <div class="container">
 
         <div class="row" data-aos="zoom-out">
@@ -217,8 +217,8 @@
             <h3>CSR Projects</h3>
           </div>
           
-          <!-- <div class="col-lg-3 dropdown-btn-container text-center">
-            <a class="dropdown-btn align-middle" href="#">Call To Action</a>
+          <!-- <div class="col-lg-3 ctn-btn-container text-center">
+            <a class="ctn-btn align-middle" href="#">Call To Action</a>
           </div> -->
         </div>
 
