--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -54,7 +54,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li class="dropdown"><a href="#dropdown"><span>CSR Project </span> <i class="bi bi-chevron-down"></i></a>
+          <li class="#"><a href="#dropdown"><span>CSR Project </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#She_Arise">She Arise </a></li>
              <!-- <li class="dropdown"><a href="#"><span>Leadership Development</span> <i class="bi bi-chevron-right"></i></a>
@@ -208,7 +208,7 @@
       </div>
     </section><!-- End About Section -->
     <!-- ======= dropdown Section ======= -->
-    <section id="ctn" class="ctn">
+    <section id="cta" class="cta">
       <div class="container">
 
         <div class="row" data-aos="zoom-out">
@@ -217,8 +217,8 @@
             <h3>CSR Projects</h3>
           </div>
           
-          <!-- <div class="col-lg-3 ctn-btn-container text-center">
-            <a class="ctn-btn align-middle" href="#">Call To Action</a>
+          <!-- <div class="col-lg-3 cta-btn-container text-center">
+            <a class="cta-btn align-middle" href="#">Call To Action</a>
           </div> -->
         </div>
 
