--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -54,7 +54,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li class="#"><a href="#dropdown"><span>CSR Project </span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#dropdown"><span>CSR Project </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#She_Arise">She Arise </a></li>
              <!-- <li class="dropdown"><a href="#"><span>Leadership Development</span> <i class="bi bi-chevron-right"></i></a>
