--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -304,25 +304,25 @@
           <li class="nav-item col-3" data-aos="zoom-in">
             <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
               <i class="ri-gps-line"></i>
-   
+  				 <h4 class="d-none d-lg-block">Project Management</h4>
             </a>
           </li>
           <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
             <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
               <i class="ri-body-scan-line"></i>
-              <h4 class="d-none d-lg-block">Unde praesenti mara setra le</h4>
+              <h4 class="d-none d-lg-block">Training new generation</h4>
             </a>
           </li>
           <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
             <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
               <i class="ri-sun-line"></i>
-              <h4 class="d-none d-lg-block">Pariatur explica nitro dela</h4>
+              <h4 class="d-none d-lg-block"> Women Empowerment</h4>
             </a>
           </li>
           <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
             <a class="nav-link" data-bs-toggle="tab" href="#tab-4">
               <i class="ri-store-line"></i>
-              <h4 class="d-none d-lg-block">Nostrum qui dile node</h4>
+              <h4 class="d-none d-lg-block">Up-skilling School and College Students</h4>
             </a>
           </li>
         </ul>
@@ -374,21 +374,24 @@
           <div class="tab-pane" id="tab-2">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-                <h3>Neque exercitationem debitis soluta quos debitis quo mollitia officia est</h3>
+                <h3>Training new generationt</h3>
                 <p>
-                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                  culpa qui officia deserunt mollit anim id est laborum
+                  Headquartered in Nairobi, Kenya, Centum Learning is creating a transformative 
+                  impact across Africa, partnering with clients from diverse sectors. 
+                  Our team of over 100+ L&D professionals are almost all locals who work as 
+                  one to bridge cultural, geographical and language barriers across 14 African
+                   countries to deliver high-quality learning outcomes, enabled through
+                    customized vernacular content, digital learning platform and training 
+                    via master facilitators. Centum also runs a TVET college in Nairobi.
                 </p>
                 <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
+                  Impact of our New-age Learning Solutions
                 </p>
                 <ul>
-                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                  <li><i class="ri-check-double-line"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li>
-                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                  <li><i class="ri-check-double-line"></i> Sony </li>
+                  <li><i class="ri-check-double-line"></i> Microsoft</li>
+                  <li><i class="ri-check-double-line"></i> Airtel.</li>
+                  <li><i class="ri-check-double-line"></i> Google - Digital Skills for Africa</li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -399,20 +402,17 @@
           <div class="tab-pane" id="tab-3">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-                <h3>Voluptatibus commodi ut accusamus ea repudiandae ut autem dolor ut assumenda</h3>
+                <h3>Women Empowerment and Livelihood</h3>
                 <p>
-                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                  culpa qui officia deserunt mollit anim id est laborum
+                  Uplifting women is pivotal for an equal society. It is empowerment of the society in its truest sense. A lot of CSR implementation mandate or CSR program are centered around training women and empowering them as independent individuals, making them capable of earning their own livelihood in different ways. 
                 </p>
                 <ul>
-                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                  <li><i class="ri-check-double-line"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li>
+                  <li><i class="ri-check-double-line"></i> Women empowerment initiatives are a core activity with the Centum Foundation and its partners</li>
+                  <li><i class="ri-check-double-line"></i> Over 15,000 women across various locations countrywide in sectors like IT/ ITeS, Telecom, Beauty and Wellness, Apparel, Construction, Retail, Hospitality, BFSI, and Healthcare among others have received employability related training.</li>
+                  <li><i class="ri-check-double-line"></i> Trained women in the healthcare sector for General Duty Assistant & Pharmacy positions</li>
                 </ul>
                 <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
+                  Skilling as a CSR program involves the inculcation of skills among underskilled individuals with limited means. The aim of the activity is to empower them- Making them capable to apply the learnt skills at the actual workplace environment, thereby converting them into independent earners of their livelihood, therefore, becoming the support systems for their families.
                 </p>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -423,20 +423,17 @@
           <div class="tab-pane" id="tab-4">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-                <h3>Omnis fugiat ea explicabo sunt dolorum asperiores sequi inventore rerum</h3>
+                <h3>Up-skilling School and College Students</h3>
                 <p>
-                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                  culpa qui officia deserunt mollit anim id est laborum
+                  Up-skilling school and college students to ensure they are able to support their families in the future. It involves imparting vocational skills, technology skills (both current and emerging), along soft skills to enhance their employability.
                 </p>
                 <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
+                  Multiple ranges of upskilling initiatives for school and college students can be undertaken with the help of CSR partnerships, leading the way towards a smooth and vocational transition for these students from the academic to the professional world.
                 </p>
                 <ul>
-                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                  <li><i class="ri-check-double-line"></i>Sensitization of government school students & teachers in future technologies such as AI & ML</li>
+                  <li><i class="ri-check-double-line"></i> Providing Data Analyst training to students in Delhi NCR & Chennai</li>
+                  <li><i class="ri-check-double-line"></i> Engaging & training influencers who are prominent drivers of purchasing company's products</li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -457,11 +454,11 @@
           <div class="col-lg-15 text-center text-lg-start">
             
             <marquee  behavior="scroll" direction="left">         
-              <img src= "assets/img/about1.jpeg" height="50%" width="50%"> 
-              <img src= "assets/img/about2.jpeg" height="50%" width="50%"> 
-              <img src= "assets/img/about3.jpeg" height="50%" width="50%"> 
-              <img src= "assets/img/about4.jpeg" height="50%" width="50%"> 
-              <img src= "assets/img/about5.jpeg" height="50%" width="50%"> 
+              <img src= "assets/img/5.jpeg" height="50%" width="50%"> 
+              <img src= "assets/img/6.jpeg" height="50%" width="50%"> 
+              <img src= "assets/img/7.jpeg" height="50%" width="50%"> 
+              <img src= "assets/img/8.jpeg" height="50%" width="50%"> 
+              <img src= "assets/img/10.jpeg" height="50%" width="50%"> 
           </marquee>
           </div>
           <!-- <div class="col-lg-3 cta-btn-container text-center">
