--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -68,9 +68,9 @@
               </li>-->
               <li><a href="#She_Arise1">She Arise 2.O </a></li>
               <li><a href="#Accenture">Accenture Advance IT / Digital Skills</a></li>
-             
+             <li><a href="#Sonata"> Sonata </a></li>
               <li><a href="#Cognizant">Cognizant Tech For All</a></li>
-              <li><a href="#Sonata"> Sonata </a></li>
+              
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#services">How We Work </a></li>
@@ -819,7 +819,7 @@
             <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">RiseAgain-"An Indeed fellowship Programme" <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <div>
-		              <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+		              <div class="col-lg-3 col-md-6 d-flex align-items-stretch" align="center">
 			            <div class="member" data-aos="fade-up">
 			              <div class="member-img">
 			                <img src="assets/img/testimonies1.png" class="img-fluid" alt="">
@@ -847,7 +847,7 @@
             <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Rise Again program <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <div>
-              <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+              <div class="col-lg-3 col-md-6 d-flex align-items-stretch" align="center">
 			            <div class="member" data-aos="fade-up">
 			              <div class="member-img">
 			                <img src="assets/img/testimonies2.png" class="img-fluid" alt="">
@@ -900,7 +900,7 @@
             <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">She Arise 2.0<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <div>
-              <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+              <div class="col-lg-3 col-md-6 d-flex align-items-stretch" align="center">
 			            <div class="member" data-aos="fade-up">
 			              <div class="member-img">
 			                <img src="assets/img/testimonies3.png" class="img-fluid" alt="">
@@ -948,7 +948,7 @@
             <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">RiseAgain - "An Indeed fellowship programme" <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <div>
-              <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+              <div class="col-lg-3 col-md-6 d-flex align-items-stretch" align="center">
 			            <div class="member" data-aos="fade-up">
 			              <div class="member-img">
 			                <img src="assets/img/testimonies4.png" class="img-fluid" alt="">
