--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -1029,7 +1029,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="assets/img/1.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/pic1.jpg" class="img-fluid" alt="">
                 <div class="social">
                 <!--  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1047,7 +1047,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/2.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/pic2.jpg" class="img-fluid" alt="">
                 <div class="social">
                 <!--  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1065,7 +1065,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/3.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/pic3.jpg" class="img-fluid" alt="">
                 <div class="social">
                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1083,7 +1083,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/4.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/pic4.jpg" class="img-fluid" alt="">
                 <div class="social">
                 <!--  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1101,7 +1101,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/5.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/pic5.jpg" class="img-fluid" alt="">
                 <div class="social">
               <!--    <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1119,7 +1119,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/6.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/pic6.jpg" class="img-fluid" alt="">
                 <div class="social">
                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1136,7 +1136,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/7.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/pic7.jpg" class="img-fluid" alt="">
                 <div class="social">
                <!--   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1154,7 +1154,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/8.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/pic8.jpg" class="img-fluid" alt="">
                 <div class="social">
                 <!--  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
