--- a/Centum_Learning/index.html
+++ b/Centum_Learning/index.html
@@ -641,7 +641,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!--  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/4.jpeg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>App 2</h4>
@@ -649,7 +649,7 @@
               <a href="assets/img/5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
-          </div>
+          </div>-->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-img"><img src="assets/img/6.jpeg" class="img-fluid" alt=""></div>
